Further formatting cleanup, now for book2

--- a/4T/book1.ltx
+++ b/4T/book1.ltx
@@ -92,16 +92,16 @@
 %$\nsim$ Lackovich $\nsim$
 \newcommand{\jayaBrain}[2][]{{\color[RGB]{102,0,0}$\approx$#2$\approx$}}
 
-% $\supset$Carruthers$\subset$
+% $\Rightarrow$Carruthers$\Leftarrow$
 %\color[RGB]{230,145,56} %orig color
-\newcommand{\hayleyBrain}[2][]{{\color[RGB]{102,65,0}$\Supset$#2$\Subset$}}
+\newcommand{\hayleyBrain}[2][]{{\color[RGB]{102,65,0}$\rightleftarrows$#2$\leftrightarrows$}}
 
 %\color[RGB]{106,168,79} % orig color
-\newcommand{\oliverBrain}[2][]{{\color[RGB]{64,102,48}$\sqsupset$#2$\sqsubset$}}
+\newcommand{\oliverBrain}[2][]{{\color[RGB]{64,102,48}$\rightarrow$#2$\leftarrow$}}
 
-%$\rightleftarrows$Signe$\leftrightarrows$
+%$\supset$Signe$\subset$
 %\color[RGB]{60,120,216} % orig color
-\newcommand{\jonahBrain}[2][]{{\color[RGB]{29,57,102}$\rightrightarrows$#2$\leftleftarrows$}}
+\newcommand{\jonahBrain}[2][]{{\color[RGB]{29,57,102}$\Supset$#2$\Subset$}}
 
 \renewcommand{\contentsname}{Session}
 \begin{document}
