--- a/4T/ch21.tex
+++ b/4T/ch21.tex
@@ -18,12 +18,7 @@ We get a do-over to try to rescue Lackovich and kill the Orc of Anglia again!   
 
 
 
-\noindent\hrulefill
-
-
-
-
-\sceneHeadline{SAC-09}
+\jumpHeadline{SAC-09}
 
 Time rewinds {[}OOG- see note in Session 20{]}.  We are back at SAC-09.  The mission is that Lackovich is gone, AWOL and she's armed with unauthorized weapons.  She was last seen in the Bucket near Borrough Station, and the Orc has also been spotted in the area.  The mission objective is to retrieve Senior Constable Lackovich.  Should we find/engage with the Orc, we can kill him. 
 
@@ -224,8 +219,10 @@ Jonah and Jaya talk {[}OOG- about?{]}
 
 \sceneHeadline{Borrough Station}
 
-\jumpHeadline{Borrough Station Threat Levels }
+\textbf{Borrough Station Threat Levels }
 
+{
+\parskip=0pt
 Upper Deck: Green
 
 The Apartment Tower: Green
@@ -235,7 +232,7 @@ The Yard: Yellow
 The Factory: Orange
 
 The Vengeance of Octavian: Red
-
+}
 
 
 They arrive at Borrough Station, and work their way to the TA offices.  Station Chief Hughes is there.  Jaya, more confident this time, hands him the letter and says that her team is on a secret mission and is conscripting several of his constables to help.  Hughes choses four constables (because they work in pairs) Franke, Dev, Diego and Leah.  He also hands Jaya the key to the brig.  Hayley confuses Franke by greeting him like they know each other.
@@ -422,7 +419,7 @@ Oliver tries to get to a position where he can see the yard from a lower level/t
 
 
 
-\underline{  {\LARGE Challenges \& Refreshes }  }
+\jumpHeadline{ Challenges \& Refreshes }  
 
 
 
@@ -444,7 +441,7 @@ Oliver tries to get to a position where he can see the yard from a lower level/t
 
 
 
-\underline{  {\LARGE VP TOTALS }  }
+\jumpHeadline{ VP TOTALS }  
 
 Hayley: 4
 
