--- a/4T/ch22.tex
+++ b/4T/ch22.tex
@@ -20,15 +20,13 @@ And holy crap so many Refreshes.  I probably missed some.
 
 
 
-\noindent\hrulefill
 
 
 
+\jumpHeadline{Current Equipment: }
 
-
-
-\jumpHeadline{Current  }\underline{ Equipment: }
-
+{
+\parskip=0pt
 Jaya: Combat Armor 2
 
 Oliver: His rifle, Battle Dress Uniform 2, Radio Network 2, Parabolic Antenna 2, Rangefinder Binoculars 2, Urban Camouflage 1, Med Kit 1
@@ -36,10 +34,12 @@ Oliver: His rifle, Battle Dress Uniform 2, Radio Network 2, Parabolic Antenna 2,
 Hayley: Combat Armor 2, Med Kit 1, Gauss Pistol 2
 
 Jonah: Battle Dress Uniform 2, Forensic Bag 1
-
+}
 
 \jumpHeadline{Borrough Station Threat Levels }
 
+{
+\parskip=0pt
 Upper Deck: Green {[}CLEARED{]}
 
 The Apartment Tower: Green {[}CLEARED{]}
@@ -49,11 +49,11 @@ The Yard: Yellow
 The Factory: Orange
 
 The Vengeance of Octavian: Red
+}
 
 
 
-
-\sceneHeadline{Borrough Station}
+\jumpHeadline{Borrough Station}
 
 \textbf{{[}2 Tokens from last session{]}}
 
@@ -397,7 +397,7 @@ Lackovich and Jaya are trying to climb up the ladder and Lackovich is getting in
 
 
 
-\underline{  {\LARGE Challenges \& Refreshes }  }
+\jumpHeadline{ Challenges \& Refreshes }  
 
 
 
@@ -441,8 +441,10 @@ Lackovich and Jaya are trying to climb up the ladder and Lackovich is getting in
 
 
 
-\underline{  {\LARGE VP TOTALS }  }
+\jumpHeadline{ VP TOTALS }  
 
+{
+\parskip=0pt
 Jaya: 4
 
 Jonah: 4
@@ -450,7 +452,7 @@ Jonah: 4
 Oliver: 3
 
 Hayley: 1
-
+}
 
 
 
