--- a/4T/ch23.tex
+++ b/4T/ch23.tex
@@ -19,13 +19,11 @@ Probably.  Hopefully.  Wait- how many Tokens and Flaws do we have left for next 
 
 
 
-\noindent\hrulefill
-
-
 
 
 \jumpHeadline{Borrough Station Threat Levels }
 
+{\parskip=0pt
 Upper Deck: Green {[}CLEARED{]}
 
 The Apartment Tower: Green {[}CLEARED{]}
@@ -35,7 +33,7 @@ The Yard: Yellow {[}CLEARED{]}
 The Factory: Orange {[}CLEARED{]}
 
 The Vengeance of Octavian: Red {[}Activated{]}
-
+}
 
 \jumpHeadline{Flaws from last session: }
 
@@ -47,7 +45,7 @@ The Vengeance of Octavian: Red {[}Activated{]}
 \end{itemize}
 
 
-\sceneHeadline{The Factory}
+\jumpHeadline{The Factory}
 
 \textbf{{[}25 Tokens from last session{]}}
 
@@ -284,7 +282,7 @@ Next up: Part 3: Shit goes ill.
 
 
 
-\underline{  {\LARGE Challenges \& Refreshes }  }
+\jumpHeadline{Challenges \& Refreshes }  
 
 
 
@@ -323,7 +321,8 @@ Next up: Part 3: Shit goes ill.
 
 
 
-\jumpHeadline{\hl{FLAW total at end of all three Borroughs Sessions} }\footnote{\textbf{Suko T }Yikes, I think that means this is 25 more points of Backlash? \textsubscript{04/02/14 4:25pm}}\underline{   (after in-session reductions, so some are 0) }
+\textbf{\hl{FLAW total at end of all three Borroughs Sessions} }\footnote{\textbf{Suko T }Yikes, I think that means this is 25 more points of Backlash? \textsubscript{04/02/14 4:25pm}}\\
+\underline{   (after in-session reductions, so some are 0) }
 
 \begin{itemize}
 \item  {\color[RGB]{255,0,0}Flaw: Injured ribs 1 (Hayley)} 
@@ -340,7 +339,7 @@ Next up: Part 3: Shit goes ill.
 
 
 
-\underline{  {\LARGE VP TOTALS }  }
+\jumpHeadline{ VP TOTALS } 
 
 Jaya: \hl{8}\footnote{\textbf{Suko T }missing a 1 point Overcome Challenge somewhere, my total above is only 7 \textsubscript{04/02/14 4:12pm}}\footnote{$\rightarrow$\textbf{Rebecca S. }Nate has my paper I think, which should have the notes on it... \textsubscript{04/24/14 8:36pm}}
 
