--- a/4T/ch24.tex
+++ b/4T/ch24.tex
@@ -27,7 +27,7 @@ Some silver linings but they're attached to rather dark clouds.  Jonah got tons 
 
 
 
- {\LARGE Backlash } 
+\jumpHeadline{Backlash } 
 
 
 \sceneHeadline{SAC-09  {[}30 Backlash Tokens{]}}
@@ -294,11 +294,11 @@ Signe looks sympathetic, ``I'm sorry about your boy.''
 
 ``But \textit{you're} okay, aren't you?  You seem unharmed.'' says Hayley.
 
-``I'm -'' Signe pauses.  ``I'm here now.  Morgan warned me to get out so I did.'' 
+\hl{``I'm -'' Signe pauses.  ``I'm here now.  Morgan warned me to get out so I did.'' 
 
 ``I'm so happy that you did,'' says Hayley sincerely.
 
-Signe glances at the door.  ``But I should go, I really can't stay long.''\footnote{\textbf{Nathaniel Ford }It's possible it didn't come through, but Signe should have implied (naively, of course) that she had been in the facility for a while, staying with Trenton, but that she should go back and hang with him since, presumably, someone didn't want her gone long. \textsubscript{05/10/14 1:11am}}\footnote{$\rightarrow$\textbf{Suko T }I think I was picking that up but then got confused when she said she hasn't seen Trenton.  Was she saying hasn't seen him yet *that day*? \textsubscript{05/10/14 2:08am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }It was more that 'over the entire course of history she hadn't seen him much', even if recently it was more often than it had been. \textsubscript{05/12/14 12:45pm}}\footnote{$\rightarrow$\textbf{Suko T }Ah, that makes sense.  Not that Hayley would ask for clarification but good for me to know how the subtext was going. \textsubscript{05/13/14 2:54pm}}\footnote{$\rightarrow$\textbf{Suko T }I just added ``yet today'' to make it clearer for posterity. \textsubscript{05/23/14 5:17pm}}
+Signe glances at the door.  ``But I should go, I really can't stay long.}''\footnote{\textbf{Nathaniel Ford }It's possible it didn't come through, but Signe should have implied (naively, of course) that she had been in the facility for a while, staying with Trenton, but that she should go back and hang with him since, presumably, someone didn't want her gone long. \textsubscript{05/10/14 1:11am}}\footnote{$\rightarrow$\textbf{Suko T }I think I was picking that up but then got confused when she said she hasn't seen Trenton.  Was she saying hasn't seen him yet *that day*? \textsubscript{05/10/14 2:08am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }It was more that 'over the entire course of history she hadn't seen him much', even if recently it was more often than it had been. \textsubscript{05/12/14 12:45pm}}\footnote{$\rightarrow$\textbf{Suko T }Ah, that makes sense.  Not that Hayley would ask for clarification but good for me to know how the subtext was going. \textsubscript{05/13/14 2:54pm}}\footnote{$\rightarrow$\textbf{Suko T }I just added ``yet today'' to make it clearer for posterity. \textsubscript{05/23/14 5:17pm}}
 
 ``Do you want to stay?  I think you could stay with me.''  Hayley gestures to her bunk.
 
@@ -383,7 +383,7 @@ Jaya finds Rook and he tells her that if she wants to visit her family, she will
 
 \sceneHeadline{Hayley and Jaya}
 
-REBECCAxxBEGINxxHIGHLIGHTxxHayley is discharged from the Medbay (they need the room for someone else).  She returns to the bunk and runs into Jaya who is getting ready to visit her family.  Hayley greets her and helps her get dressed and pack a bag.
+\hl{Hayley is discharged from the Medbay (they need the room for someone else).  She returns to the bunk and runs into Jaya who is getting ready to visit her family.  Hayley greets her and helps her get dressed and pack a bag.
 
 Hayley ask Jaya, ``Is it okay to have an overnight guest?''
 
@@ -397,7 +397,7 @@ Hayley ask Jaya, ``Is it okay to have an overnight guest?''
 
 Jaya looks a bit surprised and then looks Hayley up and down again, a little intrigued.  ``Huh.  I didn't see that coming.''  She grins.  ``No \textit{wonder} Trenton is mad.''
 
-Hayley smiles back uncertainly, but clearly has no idea what she's talking about.xxENDxxHIGHLIGHT\footnote{\textbf{Nathaniel Ford }I totally missed this conversation. Delightful! \textsubscript{05/10/14 1:16am}}\footnote{$\rightarrow$\textbf{Suko T }Yeah, that's why I missed the Trenton-Jonah stuff, this was too good to skip :)  I loved the direction it went. \textsubscript{05/10/14 2:15am}}
+Hayley smiles back uncertainly, but clearly has no idea what she's talking about.}\footnote{\textbf{Nathaniel Ford }I totally missed this conversation. Delightful! \textsubscript{05/10/14 1:16am}}\footnote{$\rightarrow$\textbf{Suko T }Yeah, that's why I missed the Trenton-Jonah stuff, this was too good to skip :)  I loved the direction it went. \textsubscript{05/10/14 2:15am}}
 
 
 \sceneHeadline{Jonah and Trenton}
@@ -511,7 +511,7 @@ Douglas refuses.  Jaya clenches her fist angrily around the end of her shortened
 
 ``Look he just wants to talk!'' says Jayce loudly.
 
-\hl{Jaya thinks fast}\footnote{\textbf{q.google }So much of this game is us trying to outmaneuver our characters efforts to try as hard as they can to miss the point. That was a nice save . \textsubscript{05/11/14 11:25am}}+1.  She pulls out some cuffs.  ``Okay here, cuff the sword to his belt.''
+\hl{Jaya thinks fast}\footnote{\textbf{q.google }So much of this game is us trying to outmaneuver our characters efforts to try as hard as they can to miss the point. That was a nice save . \textsubscript{05/11/14 11:25am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{05/12/14 12:49pm}}.  She pulls out some cuffs.  ``Okay here, cuff the sword to his belt.''
 
 Jayce and Douglas look confused.
 
@@ -546,7 +546,7 @@ She explains that their sister was the leader of the fight against their enemy. 
 
 Jonah asks about the war.  He's expecting bombs to be falling immediately.  But Morgan explains that it's not actually as immediate as that. 
 
-``We disabled Transit Minor.  Burroughs is lost.  But we sealed that off so they are having to find other ways in.''\footnote{\textbf{Nathaniel Ford }This was in response to what Morgen was up to with Patrol group 2. \textsubscript{05/10/14 1:26am}}\footnote{$\rightarrow$\textbf{q.google }Ha.  I didn't put that together.  Literal ``we''. \textsubscript{05/11/14 11:41am}}  Jonah asks if they can't just ``portal'' their way in, but Morgan explains that portals need equipment in place to work, and they can't put it in place without taking the trains in.
+\hl{``We disabled Transit Minor.  Burroughs is lost.  But we sealed that off so they are having to find other ways in.''}\footnote{\textbf{Nathaniel Ford }This was in response to what Morgen was up to with Patrol group 2. \textsubscript{05/10/14 1:26am}}\footnote{$\rightarrow$\textbf{q.google }Ha.  I didn't put that together.  Literal ``we''. \textsubscript{05/11/14 11:41am}}  Jonah asks if they can't just ``portal'' their way in, but Morgan explains that portals need equipment in place to work, and they can't put it in place without taking the trains in.
 
 ``Who, exactly is this 'they'?  Who is our enemy?'' asks Jonah.``Octavius,'' replies Morgan.
 
@@ -576,7 +576,7 @@ Jonah asks about the war.  He's expecting bombs to be falling immediately.  But 
 
 Morgan nods pushes herself slowly to her feet.  She walks to the doorway and then pauses.  She looks over the three of us and says, ``Good work.''
 
-\hl{We are all suitably stunned.}\footnote{\textbf{q.google }Rook saying protocol doesn't matter?  Morgan giving praise?  The world \_is\_ ending. \textsubscript{05/11/14 11:45am}}+1  And on that bombshell, she leaves.
+\hl{We are all suitably stunned.}\footnote{\textbf{q.google }Rook saying protocol doesn't matter?  Morgan giving praise?  The world \_is\_ ending. \textsubscript{05/11/14 11:45am}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{05/11/14 2:31pm}}  And on that bombshell, she leaves.
 
 
 
@@ -608,13 +608,13 @@ Dr. Gerhauser sighs a little and looks tired.  ``Octavius sees you as parts to f
 
 \hl{``}\footnote{\textbf{Nathaniel Ford }Again, something was skipped about Octavius's plans and Hekate's only vague notion of what they are. \textsubscript{06/08/14 12:23pm}}Your social structure is already ideally set up for Octavius to takeover.  A few Citizens controlling the masses.  If Octavius controls the Citizens then....''
 
-REBECCAxxBEGINxxHIGHLIGHTxx``Why haven't they taken over us already?''
+\hl{``Why haven't they taken over us already?''
 
 ``That is its goal.  It hasn't wanted to do it in a rush because it wants to make use of you.  If it would prefer not to damage what it wants to control.''
 
 ``They invaded you too didn't they?''
 
-``Yes.  And we fought back.  But it isn't the same.  We are not the same as you.''xxENDxxHIGHLIGHT\footnote{\textbf{q.google }\_Rough\_ reconstruction.  There is questioning about what they want and why they don't just take it, which leads to discussion about the invasion of the Gerhausers' homeland (though not where that actually was!), and an explanation that Octavius treated them differently.  But the details may be wrong.
+``Yes.  And we fought back.  But it isn't the same.  We are not the same as you.''}\footnote{\textbf{q.google }\_Rough\_ reconstruction.  There is questioning about what they want and why they don't just take it, which leads to discussion about the invasion of the Gerhausers' homeland (though not where that actually was!), and an explanation that Octavius treated them differently.  But the details may be wrong.
 
 I'm also confused by the pronouns.  I don't remember if Dr. G used ``they'', ``it'', or just ``Octavius'' to refer to Octavius. \textsubscript{05/11/14 12:02pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Gerhauser is fairly fluid with her use of pronouns; there is an internal logic, but I probably mess it up from time to time.
 
@@ -622,11 +622,11 @@ Essentially, if you're talking about Octavius-who-invades, it's 'They'. If you'r
 
 ``How are you different from us?''
 
-``We're different, but very closely related, species\footnote{\textbf{q.google }Despite her attempts this goes over Jonah's head.  The notion of different kinds of people being different biologically isn't one he really has experience with.  (I don't think he ever saw the prisoner from SAC-01...) \textsubscript{05/11/14 11:51am}}.  We're smarter and stronger than you.  We heal faster.''  She makes some statements to the effect of it \hl{not being a value judgment}\footnote{\textbf{q.google }As discussed afterwards, from a modern point of view, it most certainly is a value judgment.  Dr. G believes she is \_better\_.  Her being willing to be friendly (or even intimate) with the lesser folk doesn't change her seeing a fundamental distinction.
+``We're different, \hl{but very closely related, species}\footnote{\textbf{q.google }Despite her attempts this goes over Jonah's head.  The notion of different kinds of people being different biologically isn't one he really has experience with.  (I don't think he ever saw the prisoner from SAC-01...) \textsubscript{05/11/14 11:51am}}.  We're smarter and stronger than you.  We heal faster.''  She makes some statements to the effect of it \hl{not being a value judgment}\footnote{\textbf{q.google }As discussed afterwards, from a modern point of view, it most certainly is a value judgment.  Dr. G believes she is \_better\_.  Her being willing to be friendly (or even intimate) with the lesser folk doesn't change her seeing a fundamental distinction.
 
 Whether Dr. G's racial superiority is balanced out by her \_noblesse oblige\_ is a sticky point for the audience to debate.  But from the point of view of someone living in the Directorate, this just comes of as ``Citizens think they are better than everyone else''. \textsubscript{05/11/14 11:55am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Perspicacious analysis. There are more underlying points here, but they are probably post-show discussions and don't actually impact this quite-appropriate understanding. \textsubscript{05/12/14 12:54pm}}, just that it is what it is.
 
-``Tertius was different,'' says Dr. Gerhauser.  ``Tertius is similar to Octavius but was very vain.  Some parts of it were obsessed with eternal life.  Some of its constituents were very long lived- they go all the way back to Primus\footnote{\textbf{q.google }At this point it's still not clear what Tertius, Octavius or Primus are, or what ``constitutents'' means in this context.  In particular the numerical order is an OOG convenience: the fact these names are numbers isn't known IG. \textsubscript{05/11/14 12:05pm}}.''  She explains that Tertius behaved differently than Octavius choosing to have only constituents that are healthy and strong to preserve its life.  \hl{She glances meaningfully at Hayley}\footnote{\textbf{q.google }An important point I don't remember is whether the relationship between Tertius and the Directorate, and whether is stated explicitly.  I don't think it was, but Dr. G \_did\_ look at Hayley when discussing it.
+\hl{``Tertius was different,'' says Dr. Gerhauser.  ``Tertius is similar to Octavius but was very vain.  Some parts of it were obsessed with eternal life.  Some of its constituents were very long lived- they go all the way back to Primus}\footnote{\textbf{q.google }At this point it's still not clear what Tertius, Octavius or Primus are, or what ``constitutents'' means in this context.  In particular the numerical order is an OOG convenience: the fact these names are numbers isn't known IG. \textsubscript{05/11/14 12:05pm}}.''  She explains that Tertius behaved differently than Octavius choosing to have only constituents that are healthy and strong to preserve its life.  \hl{She glances meaningfully at Hayley}\footnote{\textbf{q.google }An important point I don't remember is whether the relationship between Tertius and the Directorate, and whether is stated explicitly.  I don't think it was, but Dr. G \_did\_ look at Hayley when discussing it.
 
 We did discuss it later OOG, but I think it was \_just\_ OOG. \textsubscript{05/11/14 12:07pm}}\footnote{$\rightarrow$\textbf{Suko T }It might be but the connection between Hayley and Tertius was drawn. I can't remember how Tertius came up in the first place though.  In this dialog it is just dropped in with no lead. \textsubscript{05/11/14 2:35pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }I forget exactly how it came up as well, but I think it had to do with a reference to Tertius having had more control of the Directorate in the past, but Octavius moved in on the situation. And then the PCs asking about how they differed. \textsubscript{05/12/14 1:33pm}}\footnote{$\rightarrow$\textbf{Suko T }That sounds very likely.  I had forgotten that it was mentioned that Tertius had been in the Directorate for a while. \textsubscript{05/13/14 2:59pm}}.
 
@@ -672,7 +672,7 @@ We did discuss it later OOG, but I think it was \_just\_ OOG. \textsubscript{05/
 
 ``May I ask why you are here? Why are you fighting?'' asks Jonah.
 
-``Our people are dead.  Morgan wants to destroy Octavius. And I want to defeat Octavius\footnote{\textbf{q.google }Somewhere in all this the surprising information is gained that the sister who wants to save the Orc is Morgan \_not\_ Dr. G.  The latter believes the Orc's identity or self is gone and irrecoverable. \textsubscript{05/11/14 12:24pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Um. There may have been a miscommunication around this, but that is probably natural given the different perspectives different parties have on what it means to 'save' someone, and the hard facts of events that had occurred up until this point, and how that closes certain options. \textsubscript{05/12/14 1:00pm}}\footnote{$\rightarrow$\textbf{Suko T }Interesting.  I actually didn't think the roles necessarily swapped (i.e. that Morgan wanted to save the Orc and that Dr. G didn't) I just thought, as Nate mentioned, that how to ``save the Orc'' had been redefined to a level that was probably outside of our character's understanding.  Well maybe Hayley would get it, but you know, she's got a pretty messed up idea of what basic terms like ``living'' and ``dying'' mean. :) \textsubscript{05/13/14 3:30pm}}.''
+``Our people are dead.  \hl{Morgan wants to destroy Octavius. And I want to defeat Octavius}\footnote{\textbf{q.google }Somewhere in all this the surprising information is gained that the sister who wants to save the Orc is Morgan \_not\_ Dr. G.  The latter believes the Orc's identity or self is gone and irrecoverable. \textsubscript{05/11/14 12:24pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Um. There may have been a miscommunication around this, but that is probably natural given the different perspectives different parties have on what it means to 'save' someone, and the hard facts of events that had occurred up until this point, and how that closes certain options. \textsubscript{05/12/14 1:00pm}}\footnote{$\rightarrow$\textbf{Suko T }Interesting.  I actually didn't think the roles necessarily swapped (i.e. that Morgan wanted to save the Orc and that Dr. G didn't) I just thought, as Nate mentioned, that how to ``save the Orc'' had been redefined to a level that was probably outside of our character's understanding.  Well maybe Hayley would get it, but you know, she's got a pretty messed up idea of what basic terms like ``living'' and ``dying'' mean. :) \textsubscript{05/13/14 3:30pm}}.''
 
 {[}...{]}
 
@@ -725,7 +725,7 @@ Jaya interrupts her and says, \hl{``You don't look so good- let me turn those dr
 ``Fuck you too,'' says Jaya, relieved.  And she leaves quickly.
 
 
-\sceneHeadline{\hl{Hayley and Carruthers}}\footnote{\textbf{Rebecca S. }Saddest \& most touching in scene in the game to date.  The feels, they hurt me even now. \textsubscript{05/10/14 9:49am}}\footnote{$\rightarrow$\textbf{q.google }Yeah.  And this in a session with a larger than usual share of touching scenes.  This one was tragic. \textsubscript{05/11/14 12:29pm}}+1\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 I'm glad it came off. \textsubscript{05/12/14 1:00pm}}
+\sceneHeadline{\hl{Hayley and Carruthers}}\footnote{\textbf{Rebecca S. }Saddest \& most touching in scene in the game to date.  The feels, they hurt me even now. \textsubscript{05/10/14 9:49am}}\footnote{$\rightarrow$\textbf{q.google }Yeah.  And this in a session with a larger than usual share of touching scenes.  This one was tragic. \textsubscript{05/11/14 12:29pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{05/11/14 2:43pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 I'm glad it came off. \textsubscript{05/12/14 1:00pm}}
 
 Hayley is walking back to her Bunk and runs into Carruthers in the hallway outside of the Bunks.  Carruthers is leaning against the wall, bouncing a ball against the floor, bouncing it off the far wall and catching it.  Hayley apologizes for bumping into her and tries to back away.  Carruthers seems to be barely holding it together and does not have her usual shy or stammering demeanor.  Hayley is about to walk past her when Carruthers asks suddenly, ``Your Operator - he's dead isn't he?  How did it feel when he died?''
 
@@ -761,75 +761,51 @@ Morgan tells Jonah, ``Keep the key with you at all times.  At some point, it may
 
 \jumpHeadline{Quotes }
 
+\quotedDialog{
 Jonah: Have you ever operated on a friend?
 
-Jaya: We're friends??
+Jaya: We're friends??\\[4mm]
+}
 
-
-
+\quotedDialog{
 Rook: Take a deep breath and tell me you love me
 
 Jaya: What the fuck?!
 
 Rook: Just repeat the words.
 
-Jaya: The FUCK you say!!
-
+Jaya: The FUCK you say!!\\[4mm]
+}
 
 
 Rook: The ink road is fine.  I'm quite jealous.
 
 
-
+\quotedDialog{
 Swan: What can I do for you?
 
 Hayley: I'm in Lab 4.  I'm not dead, am I?
 
-Swan (alarmed): Stay there!  I'll be right over.
-
+Swan (alarmed): Stay there!  I'll be right over.\\[4mm]
+}
 
 
 Jaya: It's a \textit{compromise}.  It's how we do things in the TA.  \hl{It's in the manual.}\footnote{\textbf{Suko T }Quote made particularly funny by who is saying it. :) \textsubscript{05/07/14 11:14pm}}
 
 
-
+\quotedDialog{
 Morgan: We have crossed the Rubicon
 
-Hayley: No we didn't.
+Hayley: No we didn't.\\[4mm]
+}
 
-
-
+\quotedDialog{
 Lackovich: Sorry for blaming you-
 
 Jaya: Shut up! You're on drugs!
+}
 
 
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: It's possible it didn't come through, but Signe should have implied (naively, of course) that she had been in the facility for a while, staying with Trenton, but that she should go back and hang with him since, presumably, someone didn't want her gone long., unable to correctly match (exceeded acceptable limit):Expected“I’m-” Signe pauses.  “I’m here now.  Morgan warned me to get out so I did.” 
-“I’m so happy that you did,” says Hayley sincerely.
-Signe glances at the door.  “But I should go, I really can’t stay long.”
-
-	Unable to understand footnote +1, too many options & none that matched \footnote{\textbf{q.google }So much of this game is us trying to outmaneuver our characters efforts to try as hard as they can to miss the point. That was a nice save . \textsubscript{05/11/14 11:25am}}. Optional comment markups: \footnote{\textbf{Adam Kenney }+1 \textsubscript{06/08/14 10:05pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{05/11/14 2:31pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{05/12/14 12:49pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{05/11/14 2:43pm}} 
-
-	Unable to highlight for footnote: This was in response to what Morgen was up to with Patrol group 2. because:GivenExpected“We disabled Transit Minor.  Burroughs is lost.  But we sealed that off so they are having to find other ways in.”“They disabled Transit Minor.  Borroughs is lost.  But we sealed that off so they are having to find other ways in.”
-
-	Unable to understand footnote +1, too many options & none that matched \footnote{\textbf{q.google }Rook saying protocol doesn't matter?  Morgan giving praise?  The world _is_ ending. \textsubscript{05/11/14 11:45am}}. Optional comment markups: \footnote{\textbf{Adam Kenney }+1 \textsubscript{06/08/14 10:05pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{05/11/14 2:31pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{05/12/14 12:49pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{05/11/14 2:43pm}} 
-
-	Unable to highlight for footnote: Despite her attempts this goes over Jonah's head.  The notion of different kinds of people being different biologically isn't one he really has experience with.  (I don't think he ever saw the prisoner from SAC-01...) because:GivenExpectedbut very closely related, speciesbut very closely related species
-
-	Unable to highlight for footnote: At this point it's still not clear what Tertius, Octavius or Primus are, or what "constitutents" means in this context.  In particular the numerical order is an OOG convenience: the fact these names are numbers isn't known IG. because:GivenExpectedTertius was different,” says Dr. Gerhauser.  “Tertius is similar to Octavius but was very vain.  Some parts of it were obsessed with eternal life.  Some of its constituents were very long lived- they go all the way back to PrimusTertius was different,” says Dr. Gerhauser.  “Tertius is similar to Octavius but was very vain.  Some parts of it is obsessed with eternal life.  Some of its constituents were very long lived- they go all the way back to Primus
-
-	Unable to highlight for footnote: Somewhere in all this the surprising information is gained that the sister who wants to save the Orc is Morgan _not_ Dr. G.  The latter believes the Orc's identity or self is gone and irrecoverable., unable to correctly match (exceeded acceptable limit):ExpectedMorgan wants to kill Octavius. And I want to defeat Octavius
-
-	Unable to understand footnote +1, too many options & none that matched \footnote{$\rightarrow$\textbf{q.google }Yeah.  And this in a session with a larger than usual share of touching scenes.  This one was tragic. \textsubscript{05/11/14 12:29pm}}. Optional comment markups: \footnote{\textbf{Adam Kenney }+1 \textsubscript{06/08/14 10:05pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{05/11/14 2:31pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{05/12/14 12:49pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{05/11/14 2:43pm}} 
-
-
-\fi
 
 \vspace{\fill}
 
