--- a/4T/ch25.tex
+++ b/4T/ch25.tex
@@ -19,9 +19,8 @@ A lot of intro text to scenes was scripted, perhaps Nate would be kind enough to
 
  
 
-My Adam has an honorary good quote for the night with, ``Wait, so \underline{  {\color[RGB]{17,85,204}they killed Kenney}  }\hl{?}\footnote{\textbf{Suko T }Ha! :) \textsubscript{05/28/14 12:20am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }OMG LULZ. :D \textsubscript{05/28/14 12:04pm}}``  
+My Adam has an honorary good quote for the night with, ``Wait, so they killed Kenney\hl{?}\footnote{\textbf{Rebecca as editor }This phrase linked to a YouTube video of a South Park clip}\footnote{\textbf{Suko T }Ha! :) \textsubscript{05/28/14 12:20am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }OMG LULZ. :D \textsubscript{05/28/14 12:04pm}}``  
 
-\jumpHeadline{}
 
 \jumpHeadline{At the start}
 
@@ -59,7 +58,7 @@ We go under and everyone mentally ``sees'' themselves in a train car, blurred im
 
 
 
-\jumpHeadline{ Scene 1 : The Burning}
+\sceneHeadline{ Scene 1 : The Burning}
 
 Oliver is in a wheelchair.  When she speaks he fails to recognize Octavia's voice...  Pushing down a corridor.  They enter a room with high ceilings.  Through the window is a view of sea and the red setting sun, a sight that Oliver has not seen before.
 
@@ -69,7 +68,7 @@ Kneeling in front of a brazier is a tall beautiful man.  ``\hl{Astarte}\footnote
 
  {\LARGE \textit{ {\color[RGB]{102,102,102}this was mostly scripted} } } 
 
-\jumpHeadline{Scene 2 : The Forum}
+\sceneHeadline{Scene 2 : The Forum}
 
 Octavia pushes him to another room.  Romanesque, see outside to the night.  Tall beautiful other peoples (30 of them). are seated in the forum area.  At the top colonnade area, 6 people are watching (they look different, more diverse racially, with varying skintones.  One even has a greenish tint to their face.  They are shorter and broader but still very good looking with symmetrical features.)
 
@@ -90,12 +89,12 @@ Oliver stands up and realizes his leg is whole again. ``What are you going to do
 ``Best not to tell you, just show you,'' Octavia says
 
 
-\jumpHeadline{Scene 3: Falling}
+\sceneHeadline{Scene 3: Falling}
 
 The ground opens up under him and he falls.  He presses the button on the rod but nothing happens.  He falls down a shaft.  There's a white light at the bottom... big bubble forms around him as he falls.  There is darkness and a wrenching \hl{nausea}\footnote{\textbf{Nathaniel Ford }This is exactly like, but about an order of magnitude worse, than the nausea sometimes experienced in the subway tunnels. \textsubscript{06/01/14 11:23am}}.
 
 
-\jumpHeadline{Memory : DX Platform}
+\sceneHeadline{Memory : DX Platform}
 
 Oliver \& Jonah -- the doors of the train open up and shit gets real.  
 
@@ -163,7 +162,7 @@ The little girl turns to Oliver and says ``Of course we talk to you''.  Jonah is
 
 
 
-\jumpHeadline{ Memory : Guns Out} 
+\sceneHeadline{ Memory : Guns Out} 
 
 
 
@@ -197,9 +196,9 @@ Train doors open.  Hayley is kneeling next to Oliver as he shows her how to asse
 
 ``You are?''
 
-REBECCAxxBEGINxxHIGHLIGHTxx``Lets talk more about disassembly,'' he walks through the disassembly of it. They keep removing pieces till there's nothing left of the gun.  ``You see how each part can be removed.''
+\hl{``Lets talk more about disassembly,'' he walks through the disassembly of it. They keep removing pieces till there's nothing left of the gun.  ``You see how each part can be removed.''
 
-``Yeah, they do that to people too''. xxENDxxHIGHLIGHT\footnote{\textbf{Nathaniel Ford }Prescient \textsubscript{09/22/14 10:19pm}}\footnote{$\rightarrow$\textbf{Suko T }The layers of metaphor and analogy in this scene are (and were) so cool. \textsubscript{09/23/14 4:04pm}}
+``Yeah, they do that to people too''. }\footnote{\textbf{Nathaniel Ford }Prescient \textsubscript{09/22/14 10:19pm}}\footnote{$\rightarrow$\textbf{Suko T }The layers of metaphor and analogy in this scene are (and were) so cool. \textsubscript{09/23/14 4:04pm}}
 
 ``Yeah...''
 
@@ -222,7 +221,7 @@ Little girl turns around with a pipe and advances on Hayley.  Hayley attempts to
 
 
 
-\jumpHeadline{ Memory : The Handshake} 
+\sceneHeadline{ Memory : The Handshake} 
 
 
 
@@ -283,7 +282,7 @@ Hayley wonders if that's what happened to the bodies at Nicklepan?
 
 
 
-\jumpHeadline{Memory : Dinner} 
+\sceneHeadline{Memory : Dinner} 
 
 Oliver is at dinner with Mother, Father, Roger, plus SCARY SMALL GIRL.  She puts things in her mouth.  Food, napkins, silverware. They all disappear without her chewing.
 
@@ -337,7 +336,7 @@ Octavia takes the knife and cuts Gillian's clothes off.  (( Hayley sends the fee
 
 
 
-\jumpHeadline{ Memory: Arresting Victor} 
+\sceneHeadline{ Memory: Arresting Victor} 
 
 Now we're all in the ``Arresting Victor'' scene!!
 
@@ -405,7 +404,7 @@ Oliver laughs.
 
 
 
-\jumpHeadline{ Memory : First Aid} 
+\sceneHeadline{ Memory : First Aid} 
 
 Jonah is in the scene.  Jonah has been shot, he's in a hallway.  Oliver is first-aiding him. Jonah is compelled to say ``Oh Fuck'' on all levels.  Jonah is on the ground... there's a small girl wandering the hallways, where she trails her fingers along the hallway, the wallpaper peels back. 
 
@@ -467,7 +466,7 @@ Or, more precisely, if you're an upside down four-sided die, with Oliver as the 
 
 
 
-\jumpHeadline{Memory : Scars} 
+\sceneHeadline{Memory : Scars} 
 
 Hayley and Oliver are hanging out at the cistern.  Hayley undresses.  Oliver, for the record, looks away as she undresses.  There's something moving under the water, the water is draining from the cistern.
 
@@ -564,7 +563,7 @@ so many wooooooords
 
 
 
-\jumpHeadline{ Scene : Grenade!!} 
+\sceneHeadline{ Scene : Grenade!!} 
 
 Jaya and Oliver and are in horrendous slow-mo to forever, talking.   The lights in the corridor are slowly being extinguished.
 
@@ -616,7 +615,7 @@ Eventually he lands on the grenade, and at the last moment his mouth ticks up wi
 
 
 
-\jumpHeadline{ Memory : Kate in the rain} 
+\sceneHeadline{ Memory : Kate in the rain} 
 
 \memoryScene{
 \textit{Oliver is walking down the street in Cardoza, and cloaked figure steps out to meet him.}
@@ -669,7 +668,7 @@ HE/SHE SAYS ALL THE RIGHT THINGS
 
 
 
-\jumpHeadline{ Memory : Babe in Arms} 
+\sceneHeadline{ Memory : Babe in Arms} 
 
 
 
@@ -719,7 +718,7 @@ Jaya snaps at the girl to leave and then makes the poor choice of trying to kick
 
 
 
-\jumpHeadline{ Memory : Baseline} 
+\sceneHeadline{ Memory : Baseline} 
 
 
 
@@ -820,7 +819,7 @@ Aaaaand creepy girl uses the scalpel to cut ``Kate'''s throat
 
 
 
-\jumpHeadline{ Memory : A Study of Langdon} 
+\sceneHeadline{ Memory : A Study of Langdon} 
 
 Oliver is in a scene with his father, who is cleaning a gun. 
 
@@ -870,7 +869,7 @@ Girl blows off Father's head
 
 
 
-\jumpHeadline{ Memory : The Orc of Anglia} 
+\sceneHeadline{ Memory : The Orc of Anglia} 
 
 ``What do you want?'' asks the Orc.
 
@@ -918,7 +917,7 @@ Oliver runs after the Orc.
 
 
 
-\jumpHeadline{ Memory : Jaya in the Rain} 
+\sceneHeadline{ Memory : Jaya in the Rain} 
 
 
 \memoryScene{
@@ -978,7 +977,7 @@ The little girl puts a hand on Oliver.  ``Any last words?'' she asks.
 
 
 
-\jumpHeadline{ Memory : The House} 
+\sceneHeadline{ Memory : The House} 
 
 Oliver is sitting on a balcony waiting for Hekate Gerhauser, with a bottle of wine and his back to the wall, scoping out sniper positions. Kate is there, seamlessly, sitting across from him. They have just had a long conversation. There is a book on the table. She seems to have forgotten about it. Oliver has an unlit cigarette in his hand. There is a palpable energy in the air, but everything seems very still.  The water beyond the balcony is dark, with the sense of something beneath it. It is slowly rising as it gently laps against ancient stone.
 
@@ -1016,7 +1015,7 @@ And just before it goes to black, Kate says quietly, ``I love you''
 
 
 
-\jumpHeadline{ Memory : The Battle of DX Station} \footnote{\textbf{Rebecca (as editor) }This was a link to Deus Ex-Human Revolution: Icarus Main Theme on Rdio}
+\sceneHeadline{ Memory : The Battle of DX Station} \footnote{\textbf{Rebecca (as editor) }This was a link to Deus Ex-Human Revolution: Icarus Main Theme on Rdio}
 
 shit gets real
 
@@ -1129,9 +1128,9 @@ Rebecca: I do the thing that my people tell me to do
 
 
 
-\sceneHeadline{Yellow Cards}
+\jumpHeadline{Yellow Cards}
 
-\textbf{Hayley}
+\sceneHeadline{Hayley}
 
 
 
