--- a/4T/ch27.tex
+++ b/4T/ch27.tex
@@ -12,10 +12,10 @@ We're sent on an important diplomatic mission.  Someone's gonna get punched.
 
 
 
-\noindent\hrulefill
 
 
 
+\jumpHeadline{SAC-09}
 
 \sceneHeadline{Dr. Gerhauser's Office- Hayley and Dr. Gerhauser}
 
@@ -456,6 +456,7 @@ Jaya hands the letter to Hayley, who looks at it in puzzlement but tucks it away
 
 Jaya:
 
+{\parskip=0pt
 \textbf{Dress Uniform} (2): A very impressive TA dress uniform, in either Agent or Operator variety.
 
 \textbf{Combat Vest} (1) This lightweight ballistic vest can be slipped under most outerwear and provide minor protection against bullets and bludgeoning.
@@ -465,11 +466,12 @@ Jaya:
 \textbf{Medkit} (1): A bundle of bandages, one-use painkillers and antiseptic ointments, this pouch attaches to the leg of a Transit Authority Uniform and is useful for a number of light to medium medical emergencies.
 
 \textbf{Hush Radio} (1): These handsets include earpieces and throat mikes for hands-free use that doesn't risk others hearing.
-
+}
 
 
 Jonah:
 
+{\parskip=0pt
 \textbf{Transit Authority Battle Dress Uniform} (2) Similar to the TA Patrol uniform, but with an additional backpack including several days rations, rope, bedding, matches, and other miscellaneous equipment. Also includes a semi-automatic long rifle with five clips.
 
 \textbf{Vacuum-sealed Infantry Light Combat Armor} (3) A combination of flexible plating and mesh provides total body coverage against projectile, melee and caustic damage. A full-face helmet provides protection against vaccuum (but no air supply), and can easily integrate with other equipment (including air, gas filters, radios, antennae and binoculars).
@@ -477,11 +479,12 @@ Jonah:
 \textbf{AMP (Automated Medical Pack)} (3): Requires AGENT. Independently responsive device that can be attached to an Agent's leg or back and is compatible with most equipment. Contains a limited but powerful suite of drugs and set of monitoring devices, one emergency defibrillation charge, and one emergency Winkle shot (memory-loss inducing resurrection drug).
 
 \textbf{Heavy Pulse Rifle }(3): A fully automatic bull-pup style short arm, this rifle has top-loaded clips and virtually no recoil. An underslung grenade launcher can fire a one-use high-explosive charge out to a significant distance.
-
+}
 
 
 Hayley:
 
+{\parskip=0pt
 \textbf{Transit Authority Battle Dress Uniform} (2) Similar to the TA Patrol uniform, but with an additional backpack including several days rations, rope, bedding, matches, and other miscellaneous equipment. Also includes a semi-automatic long rifle with five clips.
 
 \textbf{Vacuum-sealed Infantry Light Combat Armor} (3) A combination of flexible plating and mesh provides total body coverage against projectile, melee and caustic damage. A full-face helmet provides protection against vaccuum (but no air supply), and can easily integrate with other equipment (including air, gas filters, radios, antennae and binoculars).
@@ -494,7 +497,7 @@ Hayley:
 
 \textbf{Heavy Pulse Rifle }(3): A fully automatic bull-pup style short arm, this rifle has top-loaded clips and virtually no recoil. An underslung grenade launcher can fire a one-use high-explosive charge out to a significant distance.
 
-
+}
 
 
 \sceneHeadline{Terminus Station}
