--- a/4T/book2.tex
+++ b/4T/book2.tex
@@ -1,5 +1,9 @@
 
 \documentclass[10pt]{book}
+%\usepackage{pgfpages}
+%\pgfpagesuselayout{4 on 1}[a4paper,border shrink=5mm]
+\usepackage{amsfonts}
+\usepackage{amssymb}
 \usepackage{color}
 \usepackage{graphicx}
 \usepackage{scrextend}
@@ -17,7 +21,7 @@
  % due to the folded nature of my printouts, and the failure to scale the paper correctly
  % the bottom and non-bound margins have extra space. The top and the bound margin
  % are expected to be the specified offsets here.
- bottom=2mm,
+ bottom=4mm,
  left=2mm,
  right=2mm,
  top=20mm,
@@ -66,6 +70,7 @@
 \newcommand{\deets}[3][]{%
    {
    \parskip=0pt
+   
    \noindent\textit{Notes}: #2
    \\
    \noindent\textit{Date}:  ~#3
@@ -82,13 +87,32 @@
   \end{addmargin}
  }
 }
+
+%\color[RGB]{204,0,0} % orig color
+%$\nsim$ Lackovich $\nsim$
+\newcommand{\jayaBrain}[2][]{{\color[RGB]{102,0,0}$\approx$#2$\approx$}}
+
+% $\Rightarrow$Carruthers$\Leftarrow$
+%\color[RGB]{230,145,56} %orig color
+\newcommand{\hayleyBrain}[2][]{{\color[RGB]{102,65,0}$\rightleftarrows$#2$\leftrightarrows$}}
+
+%\color[RGB]{106,168,79} % orig color
+\newcommand{\oliverBrain}[2][]{{\color[RGB]{64,102,48}$\rightarrow$#2$\leftarrow$}}
+
+%$\supset$Signe$\subset$
+%\color[RGB]{60,120,216} % orig color
+\newcommand{\jonahBrain}[2][]{{\color[RGB]{29,57,102}$\Supset$#2$\Subset$}}
+
+\renewcommand{\contentsname}{Session}
 \begin{document}
+
+
+\include{book2_intro}
+\tableofcontents
+
 \pagestyle{mainmatter}
 \renewcommand{\chaptermark}[1]{ \markboth{#1}{} }
 
-   \tableofcontents
-
-\include{book2_timeline}
 \include{ch21}
 \include{ch22}
 \include{ch23}
