--- a/4T/book3.tex
+++ b/4T/book3.tex
@@ -1,5 +1,9 @@
 
 \documentclass[10pt]{book}
+%\usepackage{pgfpages}
+%\pgfpagesuselayout{4 on 1}[a4paper,border shrink=5mm]
+\usepackage{amsfonts}
+\usepackage{amssymb}
 \usepackage{color}
 \usepackage{graphicx}
 \usepackage{scrextend}
@@ -14,11 +18,14 @@
 \usepackage{geometry}
 \geometry{
  a5paper,
- bottom=20mm,
- left=10mm,
- right=10mm,
+ % due to the folded nature of my printouts, and the failure to scale the paper correctly
+ % the bottom and non-bound margins have extra space. The top and the bound margin
+ % are expected to be the specified offsets here.
+ bottom=4mm,
+ left=2mm,
+ right=2mm,
  top=20mm,
- bindingoffset=2cm,
+ bindingoffset=15mm,
 }
 \usepackage{fancyhdr}
 \fancypagestyle{mainmatter}{
@@ -63,6 +70,7 @@
 \newcommand{\deets}[3][]{%
    {
    \parskip=0pt
+   
    \noindent\textit{Notes}: #2
    \\
    \noindent\textit{Date}:  ~#3
@@ -79,7 +87,25 @@
   \end{addmargin}
  }
 }
+
+%\color[RGB]{204,0,0} % orig color
+%$\nsim$ Lackovich $\nsim$
+\newcommand{\jayaBrain}[2][]{{\color[RGB]{102,0,0}$\approx$#2$\approx$}}
+
+% $\supset$Carruthers$\subset$
+%\color[RGB]{230,145,56} %orig color
+\newcommand{\hayleyBrain}[2][]{{\color[RGB]{102,65,0}$\Supset$#2$\Subset$}}
+
+%\color[RGB]{106,168,79} % orig color
+\newcommand{\oliverBrain}[2][]{{\color[RGB]{64,102,48}$\sqsupset$#2$\sqsubset$}}
+
+%$\rightleftarrows$Signe$\leftrightarrows$
+%\color[RGB]{60,120,216} % orig color
+\newcommand{\jonahBrain}[2][]{{\color[RGB]{29,57,102}$\rightrightarrows$#2$\leftleftarrows$}}
+
+\renewcommand{\contentsname}{Session}
 \begin{document}
+
 \pagestyle{mainmatter}
 \renewcommand{\chaptermark}[1]{ \markboth{#1}{} }
 
